--- a/src/components/Information/InfoUser/Information.module.scss
+++ b/src/components/Information/InfoUser/Information.module.scss
@@ -3,14 +3,20 @@
 }
 .title {
     text-align: center;
-}
+
+}   
 .user-item {
     margin: 20px 5px;
-    border-bottom: 1px solid #3498db;
+    border-bottom: 1px solid var(--gray);
 }
 .user-value {
     text-align: right;
+    margin-top: 12px;
 }
 .layout-avatar {
     text-align: center;
+}
+.btn-edit {
+    margin-top: 12px;
+    text-align: right;
 }
