--- a/src/components/ProductSuggest/ProductSuggest.module.scss
+++ b/src/components/ProductSuggest/ProductSuggest.module.scss
@@ -18,4 +18,18 @@
     width: 18rem;
     margin: 10px 0px;
     cursor: pointer;
+    
+}
+.card-image {
+    min-height: 320px;
+    margin-top: 12px ;
+    cursor: pointer;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
+    transition: transform linear 0.1s;
+    will-change: transform;
+    &:hover {
+        transform: translateY(-10px);
+       box-shadow: 0 1px 20px 0 rgba(0, 0, 0, 0.05);
+       
+    }
 }
