--- a/src/components/Products/ProductItem/ProductItem.module.scss
+++ b/src/components/Products/ProductItem/ProductItem.module.scss
@@ -2,15 +2,17 @@
     margin-bottom: 40px;
 }
 .product-name {
+    cursor: pointer;
     overflow: hidden;
     text-align: left;
+    height: 48px;
 }
 .card {
     max-height: 580px;
-    min-height: 520px;
+    min-height: 400px;
 }
 .card-image {
-    min-height: 320px;
+    height: 250px;
     margin-top: 12px ;
     cursor: pointer;
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
