--- a/src/components/Admin/OrdersTable/OrdersTable.module.scss
+++ b/src/components/Admin/OrdersTable/OrdersTable.module.scss
@@ -1,12 +1,8 @@
 
-
-.filterBtn {
-    display: flex;
-    align-items: center;
-    margin: 20px 0px;
+.tableBody {
+    font-weight:500;
 }
 
-.selectFilter {
-    width: 50%;
-    margin-left: 12px;
+.wrapper {
+    min-height: 300px;
 }
