--- a/src/components/Order/OrderList/OrderList.module.scss
+++ b/src/components/Order/OrderList/OrderList.module.scss
@@ -2,6 +2,7 @@
     // overflow: scroll;
     // overflow-y: hidden;
     margin: 20px;
+    font-size: 14px;
 }
 
 .title-content {
@@ -20,4 +21,26 @@
 .selected {
     background-color: #525151;
     color: var(--bs-light);
+}
+
+.wrapper {
+    min-height: 400px;
+}
+
+.pointer {
+    cursor: pointer;
+}
+
+.detailOrder {
+    &:hover {
+        color: #000 !important;
+        font-weight: 600;
+    }
+}
+
+.image {
+    &:hover {
+        transform: translateY(-10px);
+        box-shadow: 0 1px 20px 0 rgba(0, 0, 0, 0.05);
+    }
 }
