--- a/src/views/Search/Search.module.scss
+++ b/src/views/Search/Search.module.scss
@@ -1,19 +1,19 @@
-.layout {
-    margin: 10px 0;
-}
 .carousel {
     margin-bottom: 40px;
 }
 .product-name {
+    cursor: pointer;
     overflow: hidden;
     text-align: left;
+    height: 48px;
 }
 .card {
     max-height: 580px;
-    min-height: 520px;
+    min-height: 400px;
+    margin-bottom: 24px;
 }
 .card-image {
-    min-height: 320px;
+    height: 250px;
     margin-top: 12px ;
     cursor: pointer;
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
