--- a/src/components/Admin/ProductsTable/ProductsTable.module.scss
+++ b/src/components/Admin/ProductsTable/ProductsTable.module.scss
@@ -23,5 +23,9 @@
     margin-left: 12px;
 }
 .tr {
-    background: #fd79a8;
+    background: #da5959;
+}
+
+.emptyDetail {
+    background-color: var(--bs-yellow);
 }
